# surface-extraction

./: .cvsignore  AUTHORS  COPYING  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  epm-header.in
configs/: Makefile.am  expand_from_white.cfg
models/: Makefile.am
scripts/: .cvsignore  Makefile.am  Makefile.in  asp.in  asp.pl  calibrate_white.in  calibrate_white.pl  check_surf_surf_intersect.in  clasp.in  clasp.pl  clasp1.in  clasp1.pl  clasp2.in  clasp2.pl  classify_correct.in  classify_correct.pl  cortical_thickness.in  deform_utils.pl.in  deform_utils.plib  equidistribute_object.pl.in  expand_from_white.in  expand_from_white.pl  extract_white_surface.in  extract_white_surface.pl  make_asp_grid.in  make_asp_grid.pl  marching_cubes.pl.in  mask_cortical_white_matter.in  mask_cortical_white_matter.pl  pve_defrag.in  surface_qc.in  utils.pl.in  utils.plib
src/: .cvsignore  Makefile.am  Makefile.in  adapt_object_mesh.c  adapt_sphere_metric.c  boundary_search.c  check_self_intersect.c  clip_search.c  conjugate.h  conjugate_grad.c  create_anchor_constraints.c  deform.h  deform_prototypes.h  evaluate_fit_3d.c  fit.h  fit_3d.h  fit_3d_prototypes.h  fit_prototypes.h  gw_gradient.c  inflate_to_sphere.c  interpolate_sphere.c  interval.h  line_movement.c  new_fit_3d.c  octree.c  octree.h  poly_poly_dist.c  self_intersect.c  skeletonization.c  skeletonization.h  sp_geom_prototypes.h  special_geometry.h  sphere.cc  subdiv.h  subdiv_prototypes.h  surf_surf_dist.c  surf_surf_interpolate.c  surface_angles.c  surface_fit.c  tri_mesh.h
