pkgdata_DATA = white_matter_mask.obj \
	white_model_320.obj \
	ellipsoid_1024.obj.gz \
	ellipsoid_1280.obj.gz \
	ellipsoid_128.obj.gz \
	ellipsoid_131072.obj.gz \
	ellipsoid_16384.obj.gz \
	ellipsoid_20480.obj.gz \
	ellipsoid_2048.obj.gz \
	ellipsoid_256.obj.gz \
	ellipsoid_320.obj.gz \
	ellipsoid_32768.obj.gz \
	ellipsoid_4096.obj.gz \
	ellipsoid_5120.obj.gz \
	ellipsoid_512.obj.gz \
	ellipsoid_81920.obj.gz \
	ellipsoid_8192.obj.gz

EXTRA_DIST = $(pkgdata_DATA)

