bin_PROGRAMS = surface_fit check_self_intersect create_anchor_constraints skel

surface_fit_SOURCES = 	evaluate_fit_3d.c \
		 	boundary_search.c \
			conjugate_grad.c \
			poly_poly_dist.c \
			surf_surf_dist.c \
			self_intersect.c \
			clip_search.c \
			line_movement.c \
			surface_fit.c

check_self_intersect_SOURCES = 	check_self_intersect.c \
				self_intersect.c \
				poly_poly_dist.c

create_anchor_constraints_SOURCES = create_anchor_constraints.c

skel_SOURCES = skeletonization.c

noinst_HEADERS = conjugate.h\
	deform.h \
	deform_prototypes.h \
	fit_3d.h \
	fit_3d_prototypes.h \
	interval.h \
	special_geometry.h \
	sp_geom_prototypes.h \
	subdiv.h \
	subdiv_prototypes.h \
	tri_mesh.h \
	skeletonization.h
